--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
 
 
   <groupId>org.example</groupId>
-  <artifactId>spring-boot-2.4.2-issue</artifactId>
+  <artifactId>spring-data-2.1.3-issue</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Spring Boot 2.4.2 issue</name>
+  <name>Spring Data JDBC 2.1.3 issue</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,6 +23,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jdbc</artifactId>
+      <version>2.1.3</version>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jdbc</artifactId>
